--- a/public/styles.css
+++ b/public/styles.css
@@ -47,3 +47,8 @@ label, input, select, button {
 .badge {
   display: inline-block;
   padding: 5px 10px;
+  margin: 5px 0;
+  background-color: #ffd700;
+  color: #fff;
+  border-radius: 5px;
+}
