--- a/views/challenges.ejs
+++ b/views/challenges.ejs
@@ -16,7 +16,7 @@
         <option value="50">50 ⭐</option>
         <option value="100">100 ⭐</option>
       </select>
-      <button type="submit">Start Challenge</button>
+      <button type="submit" class="btn btn-primary">Start Challenge</button>
     </form>
   </div>
 </body>
