--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,10 @@
 <body>
   <div class="container">
     <h1>Welcome to Telegram Betting App</h1>
-    <a href="/profile">Profile</a>
-    <a href="/challenges">Challenges</a>
-    <a href="/recharge">Recharge</a>
+    <p>Join us and start betting with your friends!</p>
+    <a href="https://telegram.me/<%= telegramBotToken.split(':')[0] %>">
+      <button class="btn btn-primary">Join</button>
+    </a>
   </div>
 </body>
 </html>
