--- a/views/recharge.ejs
+++ b/views/recharge.ejs
@@ -13,9 +13,9 @@
       <label for="amount">Amount:</label>
       <input type="number" name="amount" id="amount" min="1" required>
       <input type="hidden" id="paymentData" name="paymentData">
-      <button type="submit">Recharge</button>
+      <button type="submit" class="btn btn-primary">Recharge</button>
     </form>
-    <button id="google-pay-button">Pay with Google Wallet</button>
+    <button id="google-pay-button" class="btn btn-secondary">Pay with Google Wallet</button>
   </div>
   <script src="https://pay.google.com/gp/p/js/pay.js"></script>
   <script>
