--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,13 @@
     <a href="https://telegram.me/<%= telegramBotToken.split(':')[0] %>">
       <button class="btn btn-primary">Join</button>
     </a>
+    <div id="status" class="status"></div>
   </div>
+  <script>
+    const urlParams = new URLSearchParams(window.location.search);
+    if (urlParams.has('error')) {
+      document.getElementById('status').innerText = 'Please send /start to @nightstar9bot first.';
+    }
+  </script>
 </body>
 </html>
